--- a/node/package.json
+++ b/node/package.json
@@ -11,6 +11,7 @@
       "body-parser": "^1.19.0"
     },
     "devDependencies": {
+      "axios": "^0.27.2",
       "nodemon": "^2.0.15"
     }
   }
