--- a/node/package.json
+++ b/node/package.json
@@ -1,18 +1,19 @@
 {
-    "name": "notificacoes-olimpiadas",
-    "version": "1.0.0",
-    "description": "Servidor para buscar noticias nas Olimpíadas 2024",
-    "main": "server.js",
-    "scripts": {
-      "start": "nodemon server.js"
-    },
-    "dependencies": {
-      "express": "^4.17.1",
-      "body-parser": "^1.19.0"
-    },
-    "devDependencies": {
-      "axios": "^0.27.2",
-      "nodemon": "^2.0.15"
-    }
+  "name": "notificacoes-olimpiadas",
+  "version": "1.0.0",
+  "description": "Servidor para buscar noticias nas Olimpíadas 2024",
+  "main": "server.js",
+  "scripts": {
+    "start": "nodemon server.js"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "body-parser": "^1.19.0",
+    "multer": "^1.4.5-lts.1",
+    "canvas": "^2.11.2"
+  },
+  "devDependencies": {
+    "axios": "^0.27.2",
+    "nodemon": "^2.0.15"
   }
-  
+}
