--- a/node/package.json
+++ b/node/package.json
@@ -10,7 +10,8 @@
     "express": "^4.17.1",
     "body-parser": "^1.19.0",
     "multer": "^1.4.5-lts.1",
-    "canvas": "^2.11.2"
+    "canvas": "^2.11.2",
+    "nodemailer": "^6.6.3"
   },
   "devDependencies": {
     "axios": "^0.27.2",
