--- a/node/package.json
+++ b/node/package.json
@@ -11,7 +11,8 @@
     "body-parser": "^1.19.0",
     "multer": "^1.4.5-lts.1",
     "canvas": "^2.11.2",
-    "nodemailer": "^6.6.3"
+    "nodemailer": "^6.6.3",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
     "axios": "^0.27.2",
