--- a/node/package.json
+++ b/node/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.6.3"
+    "nodemailer": "^6.6.3",
+    "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "axios": "^1.7.3",
