--- a/node/package.json
+++ b/node/package.json
@@ -7,17 +7,16 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "axios": "^1.7.3",
+    "body-parser": "^1.20.2",
     "canvas": "^2.11.2",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
-    "express": "^4.17.1",
+    "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.6.3",
+    "nodemailer": "^6.9.14",
+    "nodemon": "^3.1.4",
+    "punycode": "^2.3.1",
     "telegraf": "^4.16.3"
-  },
-  "devDependencies": {
-    "axios": "^1.7.3",
-    "nodemon": "^3.1.4"
   }
 }
