--- a/node/package.json
+++ b/node/package.json
@@ -15,6 +15,7 @@
         "express": "^4.19.2",
         "multer": "^1.4.5-lts.1",
         "nodemon": "^3.1.4",
-        "telegraf": "^4.16.3"
+        "telegraf": "^4.16.3",
+        "winston": "^3.14.1"
     }
 }
