--- a/node/package.json
+++ b/node/package.json
@@ -13,6 +13,7 @@
         "csv-parser": "^3.0.0",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "moment-timezone": "^0.5.45",
         "multer": "^1.4.5-lts.1",
         "nodemon": "^3.1.4",
         "telegraf": "^4.16.3",
